fix feed generation

--- a/site/content/2013/02/2013-02-24-half-life-3.md
+++ b/site/content/2013/02/2013-02-24-half-life-3.md
@@ -5,7 +5,7 @@ Category: podcast
 Tags: ea, htc, ipad, iphone, linux, nexus, playstation, steam, ubisoft, ubuntu, unreal, valve  
 Slug: 2013-02-24-half-life-3  
 Image: http://2.bp.blogspot.com/-xCmfQTQ8AWM/USm_FPydYlI/AAAAAAAAJDo/lEpF7VIdTBc/s1600/gikme-pic-s01e06.jpg  
-Attachment: http://static.qnub.ru/gik.me/mp3/s01/00006-half-life-3.mp3  
+Enclosure: http://static.qnub.ru/gik.me/mp3/s01/00006-half-life-3.mp3  
 Mime: audio/mpeg
 
 #### Подкаст
