--- a/site/content/2013/06/2013-06-25-tanya.md
+++ b/site/content/2013/06/2013-06-25-tanya.md
@@ -5,7 +5,7 @@ Category: podcast
 Tags: adobe, android, dvd, energizer, falcon pro, freelance, frostbite, google, huawei, microsoft, nokia, nvidia, rss, science, valve, дуров  
 Slug: 2013-06-25-tanya  
 Image: http://2.bp.blogspot.com/-FVTMgX-2E3s/UcmYp5BTUyI/AAAAAAAALn4/6YqNWOJSB0o/s1600/gikme-pic-s01e23-2.jpg  
-Attachment: http://static.qnub.ru/gik.me/mp3/s01/00023-tanya.mp3  
+Enclosure: http://static.qnub.ru/gik.me/mp3/s01/00023-tanya.mp3  
 Mime: audio/mpeg
 
 #### ГАДЖЕТЫ
