--- a/site/content/2015/01/2015-01-19-emmanuil.md
+++ b/site/content/2015/01/2015-01-19-emmanuil.md
@@ -5,7 +5,7 @@ Category: podcast
 Tags: ara, google, api, hinda, tesla, ukraine, box2box, selfie  
 Slug: emmanuil  
 Image: http://1.bp.blogspot.com/-Nb5z27KnkOU/VLv-9b2qXxI/AAAAAAAAZGM/3gnLPe0gt3o/s1600/gikme-pic-s03e71.jpg  
-Attachment: http://static.qnub.ru/gik.me/mp3/s03/00071-emmanuil.mp3  
+Enclosure: http://static.qnub.ru/gik.me/mp3/s03/00071-emmanuil.mp3  
 Mime: audio/mpeg
 
 #### ГОСТЬ
