--- a/site/content/2014/02/2014-02-11-flumsics.md
+++ b/site/content/2014/02/2014-02-11-flumsics.md
@@ -40,6 +40,5 @@ Mime: audio/mpeg
 **Музыка:** [Василий Корчагин - Аляска](http://vk.com/bacc3)  
 *Не забывайте — [вся движуха у нас вконтакте!](http://vk.com/gikme)*
 
-[Скачать  
-выпуск](http://static.qnub.ru/gik.me/mp3/s02/00039-flumsics.mp3)
+[Скачать выпуск](http://static.qnub.ru/gik.me/mp3/s02/00039-flumsics.mp3)
 
