--- a/site/content/2013/02/2013-02-24-half-life-3.md
+++ b/site/content/2013/02/2013-02-24-half-life-3.md
@@ -35,6 +35,5 @@ Valve Steam Linux. <http://j.mp/YNkauL> 
 euphoria](http://promodj.com/amurstar/tracks/3834716/AJEC_Beautiful_euphoria)  
 *Не забывайте — вся движуха у нас вконтакте!*
 
-[Скачать  
-выпуск](http://static.qnub.ru/gik.me/mp3/s01/00006-half-life-3.mp3)
+[Скачать выпуск](http://static.qnub.ru/gik.me/mp3/s01/00006-half-life-3.mp3)
 
