--- a/site/content/2015/01/2015-01-19-emmanuil.md
+++ b/site/content/2015/01/2015-01-19-emmanuil.md
@@ -71,6 +71,5 @@ Mime: audio/mpeg
 **Музыка:** [Василий Корчагин - Аляска](http://vk.com/bacc3)  
 *Не забывайте — [вся движуха у нас вконтакте!](http://vk.com/gikme)*
 
-[Скачать  
-выпуск](http://static.qnub.ru/gik.me/mp3/s03/00071-emmanuil.mp3)
+[Скачать выпуск](http://static.qnub.ru/gik.me/mp3/s03/00071-emmanuil.mp3)
 
