auto generate credists

--- a/site/content/2015/01/2015-01-19-emmanuil.md
+++ b/site/content/2015/01/2015-01-19-emmanuil.md
@@ -64,12 +64,6 @@ Mime: audio/mpeg
 01:02:39 Древнее групповое selfie.  
 <https://vk.com/photo-69547083_349910251>
 
-пуэрториканский порно-режиссёр, наркоборон и непризнанный  
-президент.Японцы с мыльницами.  
+Японцы с мыльницами.  
 <http://tjournal.ru/paper/selfie-stick-1995>
-
-**Музыка:** [Василий Корчагин - Аляска](http://vk.com/bacc3)  
-*Не забывайте — [вся движуха у нас вконтакте!](http://vk.com/gikme)*
-
-[Скачать выпуск](http://static.qnub.ru/gik.me/mp3/s03/00071-emmanuil.mp3)
 
