--- a/site/content/2015/03/2015-03-01-prelude-75.md
+++ b/site/content/2015/03/2015-03-01-prelude-75.md
@@ -7,3 +7,7 @@ Slug: 2015-03-01-prelude-75
 Image: /images/preludes/s03e75.png
 Enclosure: http://static.qnub.ru/gik.me/mp3/s03/pre/00075-pre.mp3  
 Mime: audio/mpeg
+
+## Контент для людей старше 18 лет!
+
+### ОСТОРОЖНО! Нецензурная лексика!
