added perl to 78 overflow

--- a/site/content/2015/04/2015-04-03-overflow-78.md
+++ b/site/content/2015/04/2015-04-03-overflow-78.md
@@ -5,6 +5,8 @@ Category: overflow
 Tags: pebble, internet, new york, dna, robot, toyota, nintendo, half-life, 3d, tesla, china, google, amd, cancer, telegram, slack, apple
 Slug: 2015-04-03-overflow-78  
 Image: /images/overflow/overflow-78.jpg
+Enclosure: http://static.qnub.ru/gik.me/mp3/s03/pearls/78/programmers-must-suffer.mp3  
+Mime: audio/mpeg
 
 Лох — это судьба.  
 <http://tjournal.ru/paper/evolution-vanished>
