Switch static files hosting

--- a/site/content/2013/01/2013-01-14-pilot.md
+++ b/site/content/2013/01/2013-01-14-pilot.md
@@ -4,7 +4,7 @@ Author: gikme
 Category: podcast  
 Tags: arrow, bootstrap, chrome, faenza, firefox, gloom, it, lebedev, nvidia, pointer, disign, pycon, ubuntu, переезд  
 Slug: 2013-01-14-pilot  
-Enclosure: http://static.qnub.ru/gik.me/mp3/s01/00000-pilot.mp3  
+Enclosure: http://static.gik.me/mp3/s01/00000-pilot.mp3  
 Mime: audio/mpeg
 
 IT-субботник (<http://j.mp/W1fy2F>)   
