--- a/site/content/2014/02/2014-02-11-flumsics.md
+++ b/site/content/2014/02/2014-02-11-flumsics.md
@@ -5,7 +5,7 @@ Category: podcast
 Tags: 37 signals, apple, basecamp, bill gates, cisco, google, ibm, lenovo, microsoft, satya nadella, steve jobs, vaio  
 Slug: 2014-02-11-flumsics  
 Image: http://2.bp.blogspot.com/-QuThUlMMj44/UvoigVBarzI/AAAAAAAAM0Q/z7-Zf7gHhmI/s1600/gikme-pic-s02e39.jpg  
-Enclosure: http://static.qnub.ru/gik.me/mp3/s02/00039-flumsics.mp3  
+Enclosure: http://static.gik.me/mp3/s02/00039-flumsics.mp3  
 Mime: audio/mpeg
 
 #### ГАДЖЕТЫ
