--- a/site/content/2014/12/2014-12-04-67.md
+++ b/site/content/2014/12/2014-12-04-67.md
@@ -5,7 +5,7 @@ Category: podcast
 Tags: regina, yandex.browser, joxi.ru, feminism, nokia, apple, oneplus, cyanogen, app.net, ps4, hots, starwars, injustice  
 Slug: 2014-12-04-67  
 Image: http://1.bp.blogspot.com/-jE9CKvvAAPE/VIAW_WQbnfI/AAAAAAAAYZk/lzjfIezUO7E/s1600/gikme-pic-s02e67.jpg  
-Enclosure: http://static.qnub.ru/gik.me/mp3/s02/00067-feminists-against-the-glorification-of-women.mp3  
+Enclosure: http://static.gik.me/mp3/s02/00067-feminists-against-the-glorification-of-women.mp3  
 Mime: audio/mpeg
 
 #### ИНТЕРНЕТ
