--- a/site/content/2015/04/2015-04-02-prelude-78.md
+++ b/site/content/2015/04/2015-04-02-prelude-78.md
@@ -5,7 +5,7 @@ Tags: gikme
 Author: gikme  
 Slug: 2015-04-02-prelude-78
 Image: /images/preludes/s03e78.jpg
-Enclosure: http://static.qnub.ru/gik.me/mp3/s03/pre/00078-pre.mp3  
+Enclosure: http://static.gik.me/mp3/s03/pre/00078-pre.mp3  
 Mime: audio/mpeg
 
 ## Контент для людей старше 18 лет!
