--- a/site/content/2015/03/2015-03-23-prelude-77.md
+++ b/site/content/2015/03/2015-03-23-prelude-77.md
@@ -5,7 +5,7 @@ Tags: gikme
 Author: gikme  
 Slug: 2015-03-23-prelude-77
 Image: /images/preludes/s03e77.jpg
-Enclosure: http://static.qnub.ru/gik.me/mp3/s03/pre/00077-pre.mp3  
+Enclosure: http://static.gik.me/mp3/s03/pre/00077-pre.mp3  
 Mime: audio/mpeg
 
 ## Контент для людей старше 18 лет!
