--- a/site/content/2015/04/2015-04-10-overflow-79.md
+++ b/site/content/2015/04/2015-04-10-overflow-79.md
@@ -2,7 +2,7 @@ Title: Не вошедшее #79
 Date: 2015-04-10 00:32:00  
 Author: gikme  
 Category: overflow  
-Tags:
+Tags: quantum dots, sensor, star, cancer
 Slug: 2015-04-10-overflow-79  
 Image: /images/overflow/overflow-79.jpg
 Enclosure: http://static.gik.me/mp3/s03/pearls/79/type-shemale.mp3  
