--- a/site/content/2015/07/2015-07-02-overflow-84.md
+++ b/site/content/2015/07/2015-07-02-overflow-84.md
@@ -2,7 +2,7 @@ Title: Не вошедшее #84
 Date: 2015-07-02 21:25:00  
 Author: gikme  
 Category: overflow  
-Tags: apple, pushbullet, windows, oura, 3d, pepper, yandex, google, xiaomi, tinkoff, svyaznoy, warner, deezer, spotify, rdio, russianpost, top gear, habr, zvooq, starvr, wwdc, kamaz, samsung, android, youtubealibaba, linkin park, facebook, steam, selfie 
+Tags: apple, pushbullet, windows, oura, 3d, pepper, yandex, google, xiaomi, tinkoff, svyaznoy, warner, deezer, spotify, rdio, russianpost, top gear, habr, zvooq, starvr, wwdc, kamaz, samsung, android, youtubealibaba, linkin park, facebook, steam, selfie, ivi 
 Slug: 2015-07-02-overflow-84  
 Image: /images/overflow/overflow-84.jpg
 
