--- a/site/content/2015/07/2015-07-30-overflow-88.md
+++ b/site/content/2015/07/2015-07-30-overflow-88.md
@@ -6,6 +6,9 @@ Tags: google, wto, soundcloud, android, yota, japan, zappos, youtube, sony, dna,
 Slug: 2015-07-30-overflow-88  
 Image: /images/overflow/overflow-88.jpg
 
+Razer приобрела активы Ouya  
+<http://talk.gik.me/posts/KvM4khQ8HfpcYeGM7/razer-priobrela-aktivy-ouya>
+
 В ВТО договорились об отмене пошлин на ввоз высокотехнологичных товаров  
 <http://talk.gik.me/posts/Ddvy8mGd6DkgxhNXy/v-vto-dogovorilis-ob-otmene-poshlin-na-vvoz>
 
