Overflow and episode 90

--- a/site/content/2015/08/2015-08-06-farewell.md
+++ b/site/content/2015/08/2015-08-06-farewell.md
@@ -2,7 +2,7 @@ Title: #89, Прощальный выпуск
 Date: 2015-08-06 21:40:00
 Author: gikme  
 Category: podcast  
-Tags:
+Tags: belgium, windows, vkontakte, snapster, instagram, thync, yandex, disabled, nokia, ozo, 
 Slug: 2015-08-06-farewell
 Image: /images/episodes/gikme-pic-s03e89.jpg  
 Enclosure: http://static.gik.me/mp3/s03/00089-farewell.mp3  
