--- a/site/content/2015/11/2015-11-08-overflow-100.md
+++ b/site/content/2015/11/2015-11-08-overflow-100.md
@@ -2,7 +2,7 @@ Title: Не вошедшее #100
 Date: 2015-11-08 16:00:05  
 Author: gikme  
 Category: overflow  
-Tags: 
+Tags: lytro, airfuel, cancer, os2, roskomnadzor, ebay, linux rifle, tesla, microsoft, lenovo, puzzlephone
 Slug: 2015-11-08-overflow-100  
 Image: /images/overflow/overflow-100.jpg
 
