--- a/site/content/2016/01/2016-01-11-overflow-109.md
+++ b/site/content/2016/01/2016-01-11-overflow-109.md
@@ -2,7 +2,7 @@ Title: Не вошедшее #109
 Date: 2016-01-11 15:25:00  
 Author: gikme  
 Category: overflow  
-Tags:
+Tags: intel, tesla, sony, forbes, jaq, 3d, ehang, amazon, lenovo, activision, blizzard, mlg
 Slug: 2016-01-11-overflow-109  
 Image: /images/overflow/overflow-109.jpg
 
@@ -22,8 +22,8 @@ Image: /images/overflow/overflow-109.jpg
 [На 3D принтере распечатали первый в мире объект из металла внеземного происхождения](https://talk.gik.me/posts/BcdZGdQeReCKef3nx/na-3d-printere-raspechatali-pervyj-v-mire-obekt-iz-metalla)
 
 [Картинки с выставки. Знакомьтесь, первый непилотируемый дрон-такси EHang 184](https://talk.gik.me/posts/QhJDgCYAatZCiNhqk/kartinki-s-vystavki-znakomtes-pervyj-nepilotiruemyj-dron)
-[
-Amazon выходит на рынок процессоров](https://talk.gik.me/posts/GuJsPx8g4jntijzh5/amazon-vyhodit-na-rynok-processorov)
+
+[Amazon выходит на рынок процессоров](https://talk.gik.me/posts/GuJsPx8g4jntijzh5/amazon-vyhodit-na-rynok-processorov)
 
 [Стала известна дата смерти IE 8, 9 и 10](https://talk.gik.me/posts/k245idENxxZsZaf9b/stala-izvestna-data-smerti-ie-8-9-i-10)
 
