--- a/site/content/2016/04/2016-04-18.md
+++ b/site/content/2016/04/2016-04-18.md
@@ -10,7 +10,7 @@ Mime: audio/mpeg
 
 
 Информационный партнёр:  
-«Типичный Сисадмин».  pel
+«Типичный Сисадмин».  
 <https://vk.com/sysodmins>
 
 Запись прямой трансляции: интересные разговоры между подкастами + этот выпуск + недокаст «Одно название» на YouTube (подписывайся на канал):  
